// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontFamily": undefined,
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders large correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontFamily": undefined,
      "fontSize": 28,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders medium correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontFamily": undefined,
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders muted correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#999999",
      "fontFamily": undefined,
      "fontSize": 17,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders small correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontFamily": undefined,
      "fontSize": 13,
    }
  }
>
  Text
</Text>
`;

exports[`Text Snapshots renders xlarge correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#000000",
      "fontFamily": undefined,
      "fontSize": 34,
    }
  }
>
  Text
</Text>
`;
